# ProjectTemplate

./: .buildinfo  .cookiecutter.json  .gitignore  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  codeofconduct.html  contributing.html  genindex.html  index.html  license.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js  usage.html
.github/workflows/: codeql-analysis.yml  constraints.txt  doc_new.yml  docs.yml  release.yml  sphinx.yml  tests.yml
_sources/: reference.rst.txt
docs/: Makefile  conf.py  index.rst  requirements.txt  usage.rst
notebooks/: README.md  Tutorial_latest_Test.ipynb  ar2r.ipynb
src/csfdock/: DVisualize.py  DockingTools.py  KinaseModules.py  MolView.py  Project.py  Rahul-iikwon.sublime-project  Rahul-iikwon.sublime-workspace  __main__.py  ar2a_v3.py  utils.py  xg_mod.py
tests/: __init__.py  test_main.py
